Got CORS working
Renders event list

Simple view

Working

Resolved name clash on ACCOUNT

Added API calls and reducer state
