# api/lstc/swagger.yaml
@@ -50,6 +50,39 @@ paths:
             statusCode: '200'
         passthroughBehavior: when_no_match
         contentHandling: CONVERT_TO_TEXT
+    options:
+      parameters:
+      - name: "year"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "200":
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+          content: {}
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'${Access_Control_Allow_Headers}'"
+              method.response.header.Access-Control-Allow-Origin: "'${Access_Control_Allow_Origin}'"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        passthroughBehavior: "when_no_match"
+        type: "mock"
   /event/{year}/{month}/{day}:
     get:
       tags:
@@ -98,6 +131,49 @@ paths:
             statusCode: '200'
         passthroughBehavior: when_no_match
         contentHandling: CONVERT_TO_TEXT
+    options:
+      parameters:
+      - name: "year"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "month"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      - name: "day"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        "200":
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+          content: {}
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'${Access_Control_Allow_Headers}'"
+              method.response.header.Access-Control-Allow-Origin: "'${Access_Control_Allow_Origin}'"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        passthroughBehavior: "when_no_match"
+        type: "mock"
 components:
   schemas:
     Error:
